kubernetes/koop-craigslist-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: koop-craigslist
  labels:
    app: koop-craigslist
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: koop-craigslist
