kubernetes/koop-docker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koop
  labels:
    app: koop
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: koop
