kubernetes/koop-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: koop
  labels:
    app: koop
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: koop
